# XPLR-IOT-1-software

./: .gitmodules  CMakeLists.txt  README.md  Release Notes.txt  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
bq27520/: Readme.md
bq27520/zephyr/: CMakeLists.txt  Kconfig  bq27520.c  bq27520.h
compile_options/: Readme.md
compile_options/bootloader_inclusion/: Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  script.bat
compile_options/bootloader_inclusion/boards/: nrf5340dk_nrf5340_cpuapp.overlay
compile_options/bootloader_inclusion/child_image/mcuboot/: nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
compile_options/simple_hex/: Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  script.bat
compile_options/updateable_image/: Readme.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  script.bat
icg20330/: Readme.md
icg20330/zephyr/: CMakeLists.txt  Kconfig  icg20330.c  icg20330.h  icg20330_trigger.nc
ltr303/: Readme.md
ltr303/zephyr/: CMakeLists.txt  Kconfig  ltr303.c  ltr303.h
src/: Readme.md  main.c  x_sensor_aggregation_function.c  x_sensor_aggregation_function.h
src/buttons_leds/: Readme.md  x_button.c  x_button.h  x_led.c  x_led.h
src/data_handle/: Readme.md  x_base64.c  x_base64.h  x_data_handle.c  x_data_handle.h
src/sensors/: Readme.md  x_sens_adxl345.c  x_sens_adxl345.h  x_sens_battery_gauge.c  x_sens_battery_gauge.h  x_sens_bme280.c  x_sens_bme280.h  x_sens_bq27421.c  x_sens_bq27421.h  x_sens_common.c  x_sens_common.h  x_sens_common_types.h  x_sens_fxas21002.c  x_sens_fxas21002.h  x_sens_icg20330.c  x_sens_icg20330.h  x_sens_lis2dh12.c  x_sens_lis2dh12.h  x_sens_lis3mdl.c  x_sens_lis3mdl.h  x_sens_ltr303.c  x_sens_ltr303.h
src/shell_cmd/: Readme.md  x_led_func_shell_cmds.c  x_module_shell_cmds.c  x_sens_shell_cmds.c  x_shell_conf.c  x_shell_conf.h
src/system/: Readme.md  x_errno.h  x_logging.c  x_logging.h  x_pin_conf.c  x_pin_conf.h  x_storage.c  x_storage.h  x_system_conf.h
src/ublox_modules/: Readme.md  x_module_common.c  x_module_common.h
src/ublox_modules/ble/: Readme.md  x_ble.c  x_ble.h  x_ble_cmd.c  x_ble_cmd.h
src/ublox_modules/ble/mobile_app_protocol/: Readme.md  mobile_app_ble_protocol.c  mobile_app_ble_protocol.h  num_array.c  num_array.h
src/ublox_modules/cell/: Readme.md  x_cell_mqttsn.c  x_cell_mqttsn.h  x_cell_saraR5.c  x_cell_saraR5.h
src/ublox_modules/nfc/: Readme.md  x_nfc.c  x_nfc.h
src/ublox_modules/position/: Readme.md  x_pos_maxm10s.c  x_pos_maxm10s.h
src/ublox_modules/wifi/: Readme.md  x_wifi_mqtt.c  x_wifi_mqtt.h  x_wifi_ninaW156.c  x_wifi_ninaW156.h
tools/: Readme.md
tools_and_compiled_images/: Readme.md  Update_XPLR-IOT-1.bat
tools_and_compiled_images/hex_files/: Readme.md  SensorAggregation_v0.3_Bootloader_MergedCores.hex  SensorAggregation_v0.3_MergedCores.hex  SensorAggregation_v1.0_Bootloader_MergedCores.hex  SensorAggregation_v1.0_MergedCores.hex
ubxlib_priv/: Readme.md
ubxlib_priv/cell/api/: u_cell.h
ubxlib_priv/common/mqtt_client/api/: u_mqtt_client.h
ubxlib_priv/common/mqtt_client/src/: u_mqtt_client.c
ubxlib_priv/port/: ubxlib.cmake
ubxlib_priv/port/platform/common/automation/: u_run_zephyr.py
ubxlib_priv/port/platform/common/automation/docker/agent/: .env  docker-compose-dev.yml
ubxlib_priv/port/platform/zephyr/: CMakeLists.txt  Kconfig
ubxlib_priv/port/platform/zephyr/boards/short_range/nRF5_SDK/EVK-ANNA-B112/board_files/: custom_board.h
ubxlib_priv/port/platform/zephyr/boards/short_range/nRF5_SDK/EVK-NINA-B11x/board_files/: custom_board.h
ubxlib_priv/port/platform/zephyr/cfg/: u_cfg_app_platform_specific.h
ubxlib_priv/port/platform/zephyr/runner/: CMakeLists.txt
ubxlib_priv/port/platform/zephyr/src/: u_port_uart.c
ubxlib_priv/wifi/api/: u_wifi_mqtt.h
ubxlib_priv/wifi/src/: u_wifi_mqtt.c
ubxlib_priv/wifi/test/: u_wifi_mqtt_test.c
